# image-tools-tauri

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: build.yml
e2e/: fixtures.js  global-setup.js  playwright.config.js
e2e/specs/: app.e2e.js
mockups/: aesthetic-1-refined.html  aesthetic-2-editorial.html  aesthetic-3-soft.html  index.html  variant-a-photoshop.html  variant-b-davinci.html  variant-c-lightroom.html  variant-d-minimal.html
scripts/: gen-samples.mjs  screenshot-ui.mjs
src/: conversion.js  effects.js  index.html  main.js  styles.css  tab-init.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conversion.rs  lib.rs  main.rs
tests/: conversion.test.js  effects.test.js  ui.test.js
