[package]
name = "c-codeimage_tools_tauri"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "c_codeimage_tools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Dev builds: optimize the hot image-processing crates so ugoira export
# (Lanczos3 resize + JPEG encode) is usable in `tauri dev`. Without
# this, encoding a few hundred frames takes minutes. Applied per-crate
# (not via `package."*"`) because opt-level=3 on tauri-plugin crashes
# rustc on Windows MSVC.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3

